--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,206 @@
-/* You can add global styles to this file, and also import other style files */
+@import "variables";
+
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
+
+$color-light-background: #f4f7f6;
+$color-text-default: $color-darkest-blue;
+
+@font-face {
+  font-family: "ConquerorSans";
+  src: url("./assets/fonts/ConquerorSansThin.woff2") format("woff2");
+  font-weight: 100;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "ConquerorSans";
+  src: url("./assets/fonts/ConquerorSansThin-Italic.woff2") format("woff2");
+  font-weight: 100;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "ConquerorSans";
+  src: url("./assets/fonts/ConquerorSans-UltraLight.woff2") format("woff2");
+  font-weight: 200;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "ConquerorSans";
+  src: url("./assets/fonts/ConquerorSansUltraLight-Italic.woff2")
+    format("woff2");
+  font-weight: 200;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "ConquerorSans";
+  src: url("./assets/fonts/ConquerorSansLight.woff2") format("woff2");
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "ConquerorSans";
+  src: url("./assets/fonts/ConquerorSansLight-Italic.woff2") format("woff2");
+  font-weight: 300;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "ConquerorSans";
+  src: url("./assets/fonts/ConquerorSans.woff2") format("woff2");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "ConquerorSans";
+  src: url("./assets/fonts/ConquerorSans-Italic.woff2") format("woff2");
+  font-weight: 400;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "ConquerorSans";
+  src: url("./assets/fonts/ConquerorSansMedium.woff2") format("woff2");
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "ConquerorSans";
+  src: url("./assets/fonts/ConquerorSansMedium-Italic.woff2") format("woff2");
+  font-weight: 500;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "ConquerorSans";
+  src: url("./assets/fonts/ConquerorSansSemiBold.woff2") format("woff2");
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "ConquerorSans";
+  src: url("./assets/fonts/ConquerorSansSemiBold-Italic.woff2") format("woff2");
+  font-weight: 600;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "ConquerorSans";
+  src: url("./assets/fonts/ConquerorSans-Bold.woff2") format("woff2");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "ConquerorSans";
+  src: url("./assets/fonts/ConquerorSans-BoldItalic.woff2") format("woff2");
+  font-weight: 700;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "ConquerorSans";
+  src: url("./assets/fonts/ConquerorSansExtraBold.woff2") format("woff2");
+  font-weight: 800;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "ConquerorSans";
+  src: url("./assets/fonts/ConquerorSansExtrabold-Italic.woff2") format("woff2");
+  font-weight: 800;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "ConquerorSans";
+  src: url("./assets/fonts/ConquerorSansBlack.woff2") format("woff2");
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "ConquerorSans";
+  src: url("./assets/fonts/ConquerorSansBlack-Italic.woff2") format("woff2");
+  font-weight: 900;
+  font-style: italic;
+  font-display: swap;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+html,
+body {
+  height: 100%;
+}
+
+body {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: $color-light-background;
+  color: $color-text-default;
+  line-height: 1.6;
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+h1,
+h2 {
+  font-family: "ConquerorSans", sans-serif;
+  font-weight: 400;
+}
+
+p {
+  font-family: "ConquerorSans", sans-serif;
+  font-weight: 400;
+}
+
+.some-light-text {
+  font-family: "ConquerorSans", sans-serif;
+  font-weight: 300;
+}
+
+a {
+  color: $color-accent-blue;
+  text-decoration: none;
+  &:hover {
+    text-decoration: underline;
+    color: darken($color-accent-blue, 10%);
+  }
+}
+
+.container {
+  width: 90%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
